[package]
name = "files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = ["fs"] }
tokio-stream = { version = "0.1", features = ["fs"] }
tokio-util = { version = "0.6", features = ["io"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
anyhow = "1.0"
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-ipc-server = "18.0"
jsonrpc-pubsub = "18.0"
lazy_static = "1.4"
