[package]
name = "files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = ["fs", "io-util", "rt"] }
tokio-stream = { version = "0.1", features = ["fs"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
futures-async-stream = "0.2"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
unwrap_or = "1.0"
tree_magic_mini = "3.0"

[features]
serde = ["dep:serde"]
